# miconv

./: .gitignore  pyproject.toml
src/miconv/: base.py  cli.py  io.py  registry.py
src/miconv/converters/: __init__.py  fio_csv.py  kb_csv.py
tests/: test_fio.py  test_kb.py
tests/data/: fio_input.csv
