[project]
name = "miconv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ffsedd", email = "ffsedd@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
]


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]
 
[tool.setuptools.packages.find]
where = ["src"]
 
[tool.pytest.ini_options]
pythonpath = ["src"]


[project.scripts]
miconv = "miconv.cli:main"
